# LambdaRay

./: README.md  lambda_ray.cabal
src/: example.hs
src/LambdaRay/: Camera.hs  Film.hs  Helper.hs  Integrator.hs  Intersectables.hs  Light.hs  Main.hs  Sampler.hs  Scene.hs  Shader.hs  Types.hs
