name: LambdaRay
version: 0.0.0
cabal-version: -any
build-type: Simple
license: PublicDomain
license-file: ""
copyright:
maintainer: Aaron Karper
stability: None whatsoever
homepage:
package-url:
bug-reports:
synopsis: Implementation of the while language
description: Implements the very basic programming language WHILE.
				It is useful for computability introductions.
build-depends:
    base,
    containers,
    JuicyPixels,
    hmatrix,
    parallel,
    random,
    array

executable: test
main-is: example.hs
buildable: True
extensions: MultiParamTypeClasses
hs-source-dirs: src, src/LambdaRay
