name: LambdaRay
version: 0.0.0
cabal-version: -any
build-type: Simple
license: PublicDomain
license-file: ""
copyright:
maintainer: Aaron Karper
stability: None whatsoever
homepage:
package-url:
bug-reports:
synopsis: A ray tracer written in Haskell
description: A fairly complex ray tracer written in Haskell. A semester
      project in the university of Bern in the rendering algorithms
      class. If you steal this, they will know. Nobody except me
      is crazy enough to code this in Haskell.
build-depends:
    base,
    containers,
    JuicyPixels,
    hmatrix,
    parallel,
    random,
    array

executable: test
main-is: example.hs
buildable: True
includes: math.h
extensions: MultiParamTypeClasses
ghc-options: -O3 -threaded
hs-source-dirs: src, src/LambdaRay
